--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -56,8 +56,8 @@ const { activeNav } = Astro.props;
         </button>
         <ul id="menu-items" class="display-none sm:flex">
           <li>
-            <a href="/posts" class={activeNav === "posts" ? "active" : ""}>
-              Posts
+            <a href="/blog" class={activeNav === "posts" ? "active" : ""}>
+              Blog
             </a>
           </li>
           <li>
