Remove wave underline

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -145,7 +145,7 @@ const { activeNav } = Astro.props;
     @apply col-span-1;
   }
   nav a.active {
-    @apply underline decoration-wavy decoration-2 underline-offset-4;
+    @apply underline underline decoration-2 underline-offset-4;
   }
   nav a.active svg {
     @apply fill-skin-accent;
