Less wordy landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <p>
         On this blog you'll find a collection of my thoughts and learnings. I
         enjoy writing technical blog posts, but I also include more personal
-        reflection pieces as well.
+        reflection pieces.
       </p>
     </section>
 
