--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -78,6 +78,14 @@ const socialImageURL = new URL(
       )
     }
 
+    <!-- Fathom -->
+    <script
+      is:inline
+      src="https://five-blackstar.jgayfer.com/script.js"
+      data-site="HINUSZHJ"
+      defer
+    ></script>
+
     <ViewTransitions />
 
     <script is:inline src="/toggle-theme.js"></script>
