Enable tags header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,6 +59,9 @@ const { activeNav } = Astro.props;
             <a href="/blog" class={activeNav === "posts" ? "active" : ""}>
               Blog
             </a>
+            <a href="/tags" class={activeNav === "tags" ? "active" : ""}>
+              Tags
+            </a>
           </li>
           <li>
             <LinkButton
